[package]
name = "okay-you-very-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["canvas", "debug"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
image = "0.24"
